--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -30,7 +30,9 @@
             <%= image_tag "sample.jpg", class: "rounded-circle mr15", width: "40", height: "40" %>
           </a>
           <div class='dropdown-menu dropdown-menu-right'>
-            <div class='dropdown-item'>らんてっく たろう</div>
+            <div class='dropdown-item'>
+              <%= current_user.decorate.full_name %>
+            </div>
             <div class='dropdown-divider'></div>
             <%= link_to "プロフィール", '#', class: "dropdown-item" %>
             <%= link_to t('defaults.logout'), logout_path, class: "dropdown-item", method: :delete %>
