--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -1,2 +1,10 @@
-<h1>Boards#new</h1>
-<p>Find me in app/views/boards/new.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-8 offset-lg-2">
+      <h1>
+      <%= t('.title') %>
+      </h1>
+      <%= render 'form', board: @board %>
+    </div>
+  </div>
+</div>
