--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,6 +5,7 @@
         <%= t('.title') %>
       </h1>
       <%= form_with model: @user, local: true do |f| %>
+        <%= render 'shared/error_messages', object: f.object %>
         <div class="form-group">
           <%= f.label :last_name %>
           <%= f.text_field :last_name, class: 'form-control' %>
