Chap12 コメント投稿機能

--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -1,23 +1,12 @@
 <div class="col-sm-12 col-lg-4 mb-3">
     <div id="board-id-1">
         <div class="card">
-            <% if board.board_image? %>
-                <%= image_tag board.board_image.url, class: 'card-img-top', size: '300x200' %>
-            <% else %>
-                <img class="card-img-top" src="/assets/board_placeholder.png" width="300" height="200"/>
-            <% end %>
+            <%= image_tag board.board_image.url, class: 'card-img-top', size: '300x200' %>
             <div class="card-body">
                 <h4 class="card-title">
-                    <%= link_to board.title, '#' %>
+                    <%= link_to board.title, board_path(board) %>
                 </h4>
-                <div class='mr10 float-right'>
-                    <%= link_to '#', id: "button-edit-#{board.id}" do %>
-                        <%= icon 'fa', 'pen' %>
-                    <% end %>
-                    <%= link_to '#', id: "button-delete-#{board.id}", method: :delete, data: {confirm: ''} do %>
-                        <%= icon 'fas', 'trash' %>
-                    <% end %>
-                </div>
+                <%= render 'crud_menus', board: board %>
                 <ul class="list-inline">
                     <li class="list-inline-item"><i class="far fa-user"></i>
                         <%= board.user.decorate.full_name %>
