Chap14　掲示板の編集、削除

--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -6,7 +6,7 @@
                 <h4 class="card-title">
                     <%= link_to board.title, board_path(board) %>
                 </h4>
-                <%= render 'crud_menus', board: board %>
+                <%= render 'crud_menus', board: board if current_user.own?(board) %>
                 <ul class="list-inline">
                     <li class="list-inline-item"><i class="far fa-user"></i>
                         <%= board.user.decorate.full_name %>
