--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -18,5 +18,5 @@
             id: 'preview',
             size: '300x200' %>
     </div>
-    <%= f.submit t('.register'), class: 'btn btn-primary' %>
+    <%= f.submit class: 'btn btn-primary' %>
 <% end %>
