--- a/app/views/boards/edit.html.erb
+++ b/app/views/boards/edit.html.erb
@@ -1,2 +1,11 @@
-<h1>Boards#edit</h1>
-<p>Find me in app/views/boards/edit.html.erb</p>
+<%= content_for(:title, @board.title) %>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-8 offset-lg-2">
+            <h1>
+                <%= t('.title') %>
+            </h1>
+            <%= render 'form', board: @board %>
+        </div>
+    </div>
+</div>
