--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -6,12 +6,15 @@
                 <h4 class="card-title">
                     <%= link_to board.title, board_path(board) %>
                 </h4>
-                <%= render 'crud_menus', board: board if current_user.own?(board) %>
+                <%= render 'boards/crud_menus', board: board if current_user.own?(board) %>
+                <%= render 'boards/bookmark_button', board: board unless current_user.own?(board) %>
                 <ul class="list-inline">
-                    <li class="list-inline-item"><i class="far fa-user"></i>
+                    <li class="list-inline-item">
+                        <%= icon 'far', 'user' %>
                         <%= board.user.decorate.full_name %>
                     </li>
-                    <li class="list-inline-item"><i class="far fa-calendar"></i> 
+                    <li class="list-inline-item">
+                        <%= icon 'far', 'calendar' %>
                         <%= l board.created_at, format: :long %>
                     </li>
                 </ul>
