--- a/app/views/boards/_bookmark_button.html.erb
+++ b/app/views/boards/_bookmark_button.html.erb
@@ -1,8 +1,7 @@
 <ul class='crud-menu-btn list-inline float-right'>
-    <% bookmark = board.bookmarks.find_by(user_id: current_user.id) %>
-    <% if bookmark.nil? %>
-        <%= render 'boards/unbookmark', board: board %>
+    <% if current_user.bookmark?(board) %>
+        <%= render 'unbookmark', board: board %>
     <% else %>
-        <%= render 'boards/bookmark', board: board %>
+        <%= render 'bookmark', board: board %>
     <% end %>
 </ul>
