--- a/app/views/boards/_unbookmark.html.erb
+++ b/app/views/boards/_unbookmark.html.erb
@@ -1,5 +1,5 @@
 <li class="list-inline-item">
-    <%= link_to board_bookmarks_path(board), id: "js-bookmark-button-for-board-#{board.id}", method: :post do %>
-        <%= icon 'far', 'star' %>
+    <%= link_to bookmark_path(current_user.bookmarks.find_by(board_id: board.id)), id: "js-bookmark-button-for-board-#{board.id}",class:"float-right", method: :delete do %>
+        <%= icon 'fas', 'star' %>
     <% end %>
 </li>
