--- a/app/views/boards/bookmarks.html.erb
+++ b/app/views/boards/bookmarks.html.erb
@@ -15,10 +15,10 @@
     <div class="row">
         <div class="col-12">
             <div class="row">
-                <% if @boards.present? %>
-                    <%= render @boards %>
+                <% if @bookmark_boards.present? %>
+                    <%= render @bookmark_boards %>
                 <% else %>
-                    <%= t('.no_board') %>
+                    <%= t('.no_result') %>
                 <% end %>
             </div>
         </div>
