--- a/app/views/boards/_bookmark.html.erb
+++ b/app/views/boards/_bookmark.html.erb
@@ -1,5 +1,5 @@
 <li class="list-inline-item">
-    <%= link_to bookmarks_path(board_id: board.id), id: "js-bookmark-button-for-board-#{board.id}",class:"float-right", method: :post do %>
+    <%= link_to bookmarks_path(board_id: board.id), id: "js-bookmark-button-for-board-#{board.id}",class:"float-right", method: :post, remote: true do %>
         <%= icon 'far', 'star' %>
     <% end %>
 </li>
