--- a/app/views/bookmarks/destroy.js.erb
+++ b/app/views/bookmarks/destroy.js.erb
@@ -1,1 +1,1 @@
-$('#js-bookmark-button-for-board-<%= @board.id %> ').html("<%= j(render 'boards/bookmark', board: @board ) %>");
+$('#js-bookmark-button-for-board-<%= @board.id %> ').replaceWith("<%= j(render 'boards/bookmark', board: @board ) %>");
