--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,11 +1,10 @@
 <!-- コメントフォーム -->
 <div class="row mb-3">
     <div class="col-lg-8 offset-lg-2">
-        <%= form_with url: [board, comment], model: comment, local: true do |f| %>
-            <%= render 'shared/error_messages', object: f.object %>
+        <%= form_with url: [board, comment], model: comment, id: 'new-comment' do |f| %>
             <div class="form-group">
                 <%= f.label :body %>
-                <%= f.text_area :body, placeholder: Comment.human_attribute_name(:body), rows: 4, class: 'form-control mb-3' %>
+                <%= f.text_area :body, placeholder: Comment.human_attribute_name(:body), id: 'js-new-comment-body', rows: 4, class: 'form-control mb-3' %>
             </div>
             <%= f.submit t('.register'), class: 'btn btn-primary' %>
         <% end %>
