--- a/app/views/boards/bookmarks.html.erb
+++ b/app/views/boards/bookmarks.html.erb
@@ -21,6 +21,7 @@
                     <%= t('.no_result') %>
                 <% end %>
             </div>
+            <%= paginate @bookmark_boards %>
         </div>
     </div>
 </div>
