--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -10,7 +10,7 @@
     </div>
     <div class="form-group">
         <%= f.label :board_image %>
-        <%= f.file_field :board_image, class: 'form-control mb-3', accept: 'image/*' %>
+        <%= f.file_field :board_image, class: 'form-control mb-3', accept: 'image/*', onchange: 'previewImage()' %>
         <%= f.hidden_field :board_image_cache %>
     </div>
     <div class='mt-3 mb-3'>
