--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,7 @@
 <!-- コメントエリア -->
 <tr id="comment-<%= comment.id %>">
     <td style="width: 60px">
-        <%= image_tag 'sample.jpg', class: 'rounded-circle', size: '50x50' %>
+        <%= image_tag comment.user.avatar.url, class: 'rounded-circle', size: '50x50' %>
     </td>
     <td>
         <h3 class="small"><%= comment.user.decorate.full_name %></h3>
