--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -27,14 +27,14 @@
 
         <li class='nav-item dropdown dropdown-slide'>
           <a href='#' class='nav-link' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' id='header-profile'>
-            <%= image_tag "sample.jpg", class: "rounded-circle mr15", width: "40", height: "40" %>
+            <%= image_tag current_user.avatar.url, class: "rounded-circle mr15", width: "40", height: "40" %>
           </a>
           <div class='dropdown-menu dropdown-menu-right'>
             <div class='dropdown-item'>
               <%= current_user.decorate.full_name %>
             </div>
             <div class='dropdown-divider'></div>
-            <%= link_to "プロフィール", '#', class: "dropdown-item" %>
+            <%= link_to t('profiles.show.title'), profile_path, class: "dropdown-item" %>
             <%= link_to t('defaults.logout'), logout_path, class: "dropdown-item", method: :delete %>
           </div>
         </li>
